Fix Calculator estimate and workload names
